@@ -54,6 +54,7 @@
 * Global Collect: fix bug on transaction inquire request [almalee24] #4676
 * Credorax: Support google pay and apple pay [edgarv09] #4661
 * Plexo: Add support for 5 new credit card brands (passcard, edenred, anda, tarjeta-d, sodexo) [edgarv09] #4652
+* Authorize.net: Google pay token support [sainterman] #4659
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
